freest/test/prog/Invalid/SessionTypes/SendOnInChannel/SendOnInChannel.fst
module SendOnInChannel where

f : ?Int -> Skip
f c = send 5 c